--- a/eCommerce/styles/style_nav.css
+++ b/eCommerce/styles/style_nav.css
@@ -69,7 +69,7 @@ a img{
 
 .android-header {
   overflow: visible;
-  background-color: orange;
+  background-color: #8bc34a;
 }
 
   .android-header .material-icons {
@@ -122,7 +122,7 @@ a img{
   }
 
     .android-navigation .mdl-navigation__link:hover {
-      border-bottom: 4px solid #8bc34a;
+      border-bottom: 4px solid orange;
     }
 
   .android-search-box {
